sandbox/output
GildedRoseTest.java:251: error: cannot find symbol
            .map(GildedRose.generateUpdatedBackstagePasses());
                           ^
  symbol:   method generateUpdatedBackstagePasses()
  location: class GildedRose
1 error
